2011-03-22 Chris Wilson <cygwin@cwilson.fastmail.fm>
	* querycp.c: Behave on Cygwin same as on Linux.

2011-03-21 Chris Wilson <cygwin@cwilson.fastmail.fm>
	* dos2unix.c/unix2dos.c:
	  - Cygwin may define WIN32 (via include files).
	  - bugfix: Cygwin: set mode to binary in stdio mode conversion.
	    Needed in case non-Cygwin program launches dos2unix.
	  - bugfix: set failure mode if rename fails in quiet mode.
	  - New option: -s, --safe. Opposite of -f, --force.
	* Makefile: Cleanup for Cygwin.

2011-03-19 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Install links instead of binary/manpage copies on Cygwin.

2011-03-05 Erwin Waterlander <waterlan@xs4all.nl>
	* man/man1/dos2unix.pod: Replace GPL with FreeBSD license.
	* man/nl/man1/dos2unix.pod: Replace GPL with FreeBSD license.

2011-03-04 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 5.2.1

2011-03-03 Erwin Waterlander <waterlan@xs4all.nl>
	* Don't print used code page in quiet mode.

2011-03-02 Erwin Waterlander <waterlan@xs4all.nl>
	* Esperanto x-notation format is optional. Default is Unicode.
	  There is no installation of an 'eo-x' locale any more.
	  Add EO_XNOTATION=1 to make command-line to select x-notation.
	  It will change the format of the normal 'eo' locale from Unicode
	  to ASCII x-notation.

2011-02-28 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Make LFS optional with variable LFS (default on).
	* dos2unix.c/unix2dos.c: Print file name with stat() system error.

2011-02-26 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix.c/unix2dos.c: Report system error when stat() fails.
	* Makefile: Enable 64 bit file system interface (_FILE_OFFSET_BITS=64).
	  This enables opening files larger than 2GB on 32 bit systems, provided
	  the system has Large File Support (LFS). See also section 1.3.4
	  "Feature Test Macros" of The GNU C Library manual.
	  http://www.gnu.org/s/libc/manual/html_node/Feature-Test-Macros.html

2011-02-22 Erwin Waterlander <waterlan@xs4all.nl>